# lector

./: CLAUDE.md  Cargo.toml  DESIGN.md  README.md  flake.nix
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/lector-core/: Cargo.toml
crates/lector-core/src/: lib.rs
crates/lector-core/src/document/: markdown.rs  mod.rs
crates/lector-core/src/nav/: mod.rs
crates/lector-core/src/state/: annotations.rs  config.rs  mod.rs  position.rs
crates/lector-core/src/tree/: debug.rs  fs.rs  git.rs  mod.rs  watch.rs
crates/lector-gui/: Cargo.toml  tauri.conf.json
crates/lector-gui/frontend/: index.html  main.js  style.css
crates/lector-gui/src/: main.rs
crates/lector-tui/: Cargo.toml  build.rs
crates/lector-tui/src/: main.rs  render.rs
