[package]
name = "lector-gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lector"
path = "src/main.rs"

[dependencies]
comrak = "0.51"
lector-core = { path = "../lector-core" }
libc = "0.2"
open = "5"
orgize = "0.9"
rst_parser = "0.4"
rst_renderer = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
syntect = "5"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = "2"
