[package]
name = "lector-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clector"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
lector-core = { path = "../lector-core" }
notify = "8"
orgize = "0.9"
pulldown-cmark = "0.12"
ratatui = "0.29"
rst_parser = "0.4"
rst_renderer = "0.4"
